--- a/cadproto.html
+++ b/cadproto.html
@@ -37,7 +37,7 @@
 				<p>Above: The concept sketch for our toy: a remote-controlled couch cart, inspired by a real life motorized couch cart a recent Purdue graduate built and drove around campus.</p>
 				<hr />
 
-				<span class="image fit"><img src="images/cadproto2.jpg" alt="" /></span>
+				<span class="image fit"><img src="images/cadproto2.JPG" alt="" /></span>
 				<p>Above: The CAD model of the full couch cart toy assembly. The CAD software used in this course was Creo Parametric.</p>
 				<hr />
 
