--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/medesigncover.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/medesigncover.JPG" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>ME Design, Innovation, and Entrepreneurship Course</h2>
