--- a/medesign.html
+++ b/medesign.html
@@ -45,7 +45,7 @@
 				<p>Above: The final 3D printed model of our product. Although we used different materials for our analyses, we were limited to 3D printing for the actual production of our model. Our model had to be scaled down as well due to size limitations.</p>
 				<hr />
 
-				<span class="image fit"><img src="images/medesign4.jpg" alt="" /></span>
+				<span class="image fit"><img src="images/medesign4.JPG" alt="" /></span>
 				<p>Above: The bill of materials used for the financial analysis of our product. Parts that were to be manufactured in house were labeled as "M&M Manufacturing", and those costs were estimated based on method of manufacturing.</p>
 				<hr />
 			</div>
