--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Car Project</h2>
-									<p>In July 2021, I purchased a project car to work on: a 1994 Honda Civic Del Sol with a mid-engine conversion. I've been repairing and modifying this car since then.</p>
+									<p>In July 2021, I purchased a project car to work on: a 1994 Honda Civic Del Sol with a mid-engine conversion. I've been restoring and modifying this car since then.</p>
 									<ul class="actions">
 										<li><a href="delsol.html" class="button">View Project</a></li>
 									</ul>
@@ -99,7 +99,7 @@
 					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>My Resume</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<!-- <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
 							<section>
 								<a href="tian157_resume.pdf" target="_blank" class="button">View Resume</a>
 							</section>
