--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<h2>My Resume</h2>
 							<!-- <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
 							<section>
-								<a href="tian157_resume.pdf" target="_blank" class="button">View Resume</a>
+								<a href="resume.pdf" target="_blank" class="button">View Resume</a>
 							</section>
 						</div>
 					</section>
